<resources>
    <string name="app_name">Tank\'n\'Drive</string>
    <string name="action_settings">Settings</string>
    <string name="action_fahrtHistory">Fahrten History</string>
    <string name="action_tankHistory">Tanks History</string>
    <string name="date">Datum (tt.mm.jjjj)</string>
    <string name="kilometers">Kilometerstand</string>
    <string name="location">Ort</string>
    <string name="tankted">getankte Liter</string>
    <string name="hello">Tankeinträge</string>
    <string name="arrival_time">Ankunftszeit</string>
    <string name="departure_time">Abfahrtszeit</string>
    <string name="prize">Bezahlt</string>
    <string name="prizePL">Preis pro Liter</string>
    <string name="station">Tankstelle</string>
    <string name="addition">Ergänzungen</string>
    <string name="aral">Aral</string>
    <string name="shell">Shell</string>
    <string name="andere">Andere</string>
    <string name="bp">BP</string>
    <string name="total">Total</string>
    <string name="agip">Agip</string>
    <string name="dbtank">Tankeinträge</string>
    <string name="cab_delete">Eintrag löschen</string>
    <string name="cab_change">Eintrag änsern</string>
    <string name="welcome">Dein individueller\nprivater\nsuperfancy\nTank\'n\'Drive</string>

</resources>
